@@ -7,7 +7,8 @@ EXTRA_DIST	= gtkmm.spec.in \
 		  build_shared/Makefile_build_gensrc.am_fragment \
 		  build_shared/Makefile_gensrc.am_fragment \
 		  build_shared/Makefile_conditional.am_fragment \
-		  CHANGES README.win32 PORTING
+		  CHANGES README.win32 README.SUN PORTING \
+      autogen.sh
 
 
 all-local:
