@@ -189,22 +189,6 @@ fi
 
 AC_LANG_CPLUSPLUS
 
-AC_CXX_BOOL(,config_error=yes)
-AC_CXX_NAMESPACES(,config_error=yes)
-AC_CXX_MUTABLE(,config_error=yes)
-
-AC_MSG_CHECKING(if C++ environment provides all required features)
-if test "x$config_error" = xyes ; then
-  AC_MSG_RESULT([no])
-  AC_MSG_ERROR([Your compiler is not powerful enough to compile gtkmm. If it should be, see config.log for more information of why it failed.])
-fi
-AC_MSG_RESULT([yes])
-
-GTKMM_CXX_HAS_NAMESPACE_STD()
-GTKMM_CXX_HAS_STD_ITERATOR_TRAITS()
-GTKMM_CXX_HAS_SUN_REVERSE_ITERATOR()
-GTKMM_CXX_HAS_TEMPLATE_SEQUENCE_CTORS()
-GTKMM_CXX_MEMBER_FUNCTIONS_MEMBER_TEMPLATES()
 
 # Create a list of input directories for Doxygen.
 GTKMM_DOXYGEN_INPUT_SUBDIRS([pango atk gdk gtk])
