@@ -3,49 +3,5 @@
 
 #include <glibmmconfig.h>
 
-// detect common platforms
-#if defined(_WIN32)
-// Win32 compilers have a lot of varation
-#if defined(_MSC_VER)
-#define GDKMM_MSC
-#define GDKMM_WIN32
-#define GDKMM_DLL
-#elif defined(__CYGWIN__)
-#define GDKMM_GCC
-#elif defined(__MINGW32__)
-#define GDKMM_GCC
-#define GDKMM_WIN32
-#define GDKMM_DLL
-#else
-#warning "Unknown architecture (send me gcc --dumpspecs)"
-#endif
-#else
-#define GDKMM_GCC
-#endif // _WIN32
-
-/* compiler feature tests that are used during compile time and run-time
-   by gdk-- and gtk-- */
-#ifdef GDKMM_GCC
-#undef GTKMM_CXX_HAVE_PARTIAL_SPECIALIZATION
-#undef GTKMM_CXX_HAVE_NAMESPACES
-#endif // GDKMM_UNIX
-
-#ifdef GDKMM_MSC
-#pragma warning (disable: 4786 4355 4800)
-#define GTKMM_CXX_HAVE_NAMESPACES
-#endif
-
-#ifdef GDKMM_DLL
-#if defined(gdkmm_COMPILATION) && defined(DLL_EXPORT)
-#define GDKMM_API __declspec(dllexport) 
-#elif !defined(gdkmm_COMPILATION)
-#define GDKMM_API __declspec(dllimport)
-#else
-#define GDKMM_API
-#endif /* gdkmm_COMPILATION - DLL_EXPORT */
-#else
-#define GDKMM_API
-#endif /* GDKMM_DLL */
-
 #endif /* _GDKMM_CONFIG_H */
 
