@@ -8,54 +8,8 @@
 #undef GTKMM_MINOR_VERSION
 #undef GTKMM_MICRO_VERSION
 
-// detect common platforms
-#if defined(_WIN32)
-// Win32 compilers have a lot of varation
-#if defined(_MSC_VER)
-#define GTKMM_MSC
-#define GTKMM_WIN32
-#define GTKMM_DLL
-#elif defined(__CYGWIN__)
-#define GTKMM_GCC
-#elif defined(__MINGW32__)
-#define GTKMM_GCC
-#define GTKMM_WIN32
-#define GTKMM_DLL
-#else
-#warning "Unknown architecture (send me gcc --dumpspecs or equiv)"
-#endif
-#else
-#define GTKMM_GCC
-#endif /* _WIN32 */
-
-#ifdef GTKMM_GCC
-/* compiler feature tests that are used during compile time and run-time
-   by gtk-- only. tests used by gdk-- and gtk-- should go into
-   gdk--config.h.in */
-#undef GTKMM_CXX_HAVE_MUTABLE
-#undef GTKMM_CXX_HAVE_NAMESPACES
-//#undef GTKMM_CXX_GAUB
-//#undef GTKMM_CXX_AMBIGUOUS_TEMPLATES
-#undef GTKMM_CXX_MEMBER_FUNCTIONS_MEMBER_TEMPLATES
-#endif
-
-#ifdef GTKMM_MSC
-#define GTKMM_CXX_HAVE_MUTABLE
-#define GTKMM_CXX_HAVE_NAMESPACES
-#pragma warning (disable: 4786 4355 4800 4181)
-#endif
-
-#ifdef GTKMM_DLL
-#if defined(gtkmm_COMPILATION) && defined(DLL_EXPORT)
-#define GTKMM_API __declspec(dllexport) 
-#elif !defined(gtkmm_COMPILATION)
-#define GTKMM_API __declspec(dllimport)
-#else
-#define GTKMM_API
-#endif /* gtkmm_COMPILATION - DLL_EXPORT */
-#else
-#define GTKMM_API
-#endif /* GTKMM_DLL */
+//WIN32 DLL import/export stuff:
+#define GTKMM_API GLIBMM_API
 
 #endif /* _GTKMM_CONFIG_H */
 
