@@ -113,7 +113,7 @@ void Container::show_all_children(bool recursive)
 // static
 void Container_Class::destroy_callback(GtkObject* self)
 {
-#ifdef GTKMM_DEBUG_REFCOUNTING
+#ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Container_Class::destroy_callback() gobject_=%10X\n", self);
   if(self)
     g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(G_OBJECT(self)));
@@ -121,7 +121,7 @@ void Container_Class::destroy_callback(GtkObject* self)
 
   /*  This happens in Gtk::Widget::dispose_vfunc() instead
 
-  //GTKMM_LIFECYCLE
+  //GLIBMM_LIFECYCLE
   // We need to remove non-manage()ed widgets to prevent gtk_container_destroy() from destroying them.
   // Contary to what we thought once, even non-floating (sunk) widgets are destroyed by gtk_container_destroy().
 
@@ -146,7 +146,7 @@ void Container_Class::destroy_callback(GtkObject* self)
         // non-managed objects here, the container just releases the
         // reference it has acquired before in gtk_container_add().
 
-#ifdef GTKMM_DEBUG_REFCOUNTING
+#ifdef GLIBMM_DEBUG_REFCOUNTING
         g_warning("Container_Class::destroy_callback() removing child: gobject_=%10X\n", cwidget);
         if(cwidget)
           g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(G_OBJECT(cwidget)));
