@@ -34,10 +34,10 @@
 // Main::init, is a macro that calls gtk_init_abi_check whose fourth 
 // argument is sizeof(GtkWindow). Because GtkWindow has not been declared
 // yet, we have to do it explicitly. 
-#ifdef GTKMM_WIN32
+#ifdef GLIBMM_WIN32
 #include <gtk/gtkwindow.h>
 #include <gtk/gtkbox.h>
-#endif /* GTKMM_WIN32 */
+#endif /* GLIBMM_WIN32 */
 
 namespace
 {
