@@ -61,11 +61,11 @@ void Object::_init_unmanage(bool /* is_toplevel = false */)
     {
       //g_warning("Object::_init_unmanage(), object was floating: %s\n", G_OBJECT_TYPE_NAME(gobject_));
 
-      GTKMM_DEBUG_REFERENCE(this, gobject_);
+      GLIBMM_DEBUG_REFERENCE(this, gobject_);
       g_object_ref(gobject_);  //Increase ref by 1 so that it doesn't get deleted when we sink() it (sink()ing does an unref)
       gtk_object_sink((GtkObject*)gobject_); //Stops it from being floating - we will make this optional ( see Gtk::manage() ),
 
-      #ifdef GTKMM_DEBUG_REFCOUNTING
+      #ifdef GLIBMM_DEBUG_REFCOUNTING
       g_warning("gtkmm after sink: C++ instance: %10X, C instance: %10X, refcount=%d\n", (Glib::ObjectBase*)this, gobject_, G_OBJECT(gobject_)->ref_count);
       g_warning("    c instance gtype: %s\n", G_OBJECT_TYPE_NAME(gobject_));
       #endif
@@ -86,7 +86,7 @@ void Object::_init_unmanage(bool /* is_toplevel = false */)
 
 void Object::_destroy_c_instance()
 {
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::_destroy_c_instance() this=%10X, gobject_=%10X\n", this, gobject_);
     if(gobject_)
       g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
@@ -116,7 +116,7 @@ void Object::_destroy_c_instance()
       if(referenced_)
       {
         //It's not manage()ed so we just unref to destroy it
-        #ifdef GTKMM_DEBUG_REFCOUNTING
+        #ifdef GLIBMM_DEBUG_REFCOUNTING
         g_warning("final unref: gtypename: %s, refcount: %d\n", G_OBJECT_TYPE_NAME(object), ((GObject*)object)->ref_count);
         #endif
 
@@ -124,7 +124,7 @@ void Object::_destroy_c_instance()
         //So we'll connect a callback again, just so that gobject_disposed_ gets set for use later in this same method.
         gulong connection_id_destroy = g_signal_connect (object, "destroy", G_CALLBACK (&callback_destroy_), this);
 
-        GTKMM_DEBUG_UNREFERENCE(this, object);
+        GLIBMM_DEBUG_UNREFERENCE(this, object);
         g_object_unref(object);
 
         if(!gobject_disposed_) //or if(g_signal_handler_is_connected(object, connection_id_destroy))
@@ -138,7 +138,7 @@ void Object::_destroy_c_instance()
         // and gtk_object_destroy() just tells everyone "drop your refs, please!".
         if (!gobject_disposed_)
         {
-          #ifdef GTKMM_DEBUG_REFCOUNTING
+          #ifdef GLIBMM_DEBUG_REFCOUNTING
           g_warning("Gtk::Object::_destroy_c_instance(): Calling gtk_object_destroy(): gobject_=%10X, gtypename=%s\n", object, G_OBJECT_TYPE_NAME(object));
           #endif
 
@@ -150,7 +150,7 @@ void Object::_destroy_c_instance()
       {
         //It's manag()ed, but the coder decided to delete it before deleting its parent.
         //That should be OK because the Container can respond to that.
-        #ifdef GTKMM_DEBUG_REFCOUNTING
+        #ifdef GLIBMM_DEBUG_REFCOUNTING
         g_warning("Gtk::Object::_destroy_c_instance(): Calling gtk_object_destroy(): gobject_=%10X\n", gobject_);
         #endif
 
@@ -168,7 +168,7 @@ void Object::_destroy_c_instance()
 
 Object::~Object()
 {
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::~Object() gobject_=%10X\n", gobject_);
   #endif
 
@@ -180,7 +180,7 @@ void Object::disconnect_cpp_wrapper()
 {
   //GTKMM_LIFECYCLE:
 
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::disconnect_cpp_wrapper() this=%10X, gobject_=%10X\n", this, gobject_);
     if(gobject_)
       g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
@@ -207,7 +207,7 @@ void Object::destroy_notify_()
   //Overriden.
   //GTKMM_LIFECYCLE
 
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::destroy_notify_: this=%10X, gobject_=%10X\n", this, gobject_);
   if(gobject_)
     g_warning("  gtypename=%s\n", G_OBJECT_TYPE_NAME(gobject_));
@@ -221,14 +221,14 @@ void Object::destroy_notify_()
   {
     if (!referenced_) //If it's manage()ed.
     {
-      #ifdef GTKMM_DEBUG_REFCOUNTING
+      #ifdef GLIBMM_DEBUG_REFCOUNTING
       g_warning("Gtk::Object::destroy_notify_: before delete this.\n");
       #endif
       delete this; //Free the C++ instance.
     }
     else  //It's not managed, but the C gobject_ just died before the C++ instance..
     {
-      #ifdef GTKMM_DEBUG_REFCOUNTING
+      #ifdef GLIBMM_DEBUG_REFCOUNTING
       g_warning("Gtk::Object::destroy_notify_: setting gobject_ to 0\n");
       #endif
       gobject_ = 0;
@@ -242,7 +242,7 @@ void Object::destroy_()
   //Called from destructors.
   //GTKMM_LIFECYCLE
 
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::destroy_(): gobject_: %10X\n", gobject_);
   if(gobject_)
    g_warning("  gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
@@ -284,7 +284,7 @@ void Object::set_manage()
   {
     //g_warning("Object::set_manage(), not sinking, just unrefing: %s\n", G_OBJECT_TYPE_NAME(gobject_));
 
-    //DEF_GTKMM_DEBUG_UNREF(this, gobj())
+    //DEF_GLIBMM_DEBUG_UNREF(this, gobj())
     //g_object_unref(gobj());
   }
 
