@@ -28,7 +28,7 @@
 #include <gtkmmconfig.h>
 #include <utility>
 
-GTKMM_USING_STD(pair)
+GLIBMM_USING_STD(pair)
 
 _DEFS(gtkmm,gtk)
 _PINCLUDE(glibmm/private/object_p.h)
