@@ -24,7 +24,7 @@ _DEFS(gtkmm,gtk)
 #include <iterator>
 #include <gtk/gtktreemodel.h> /* for GtkTreeIter */
 
-GTKMM_USING_STD(forward_iterator_tag)
+GLIBMM_USING_STD(forward_iterator_tag)
 
 
 namespace Gtk
