@@ -23,8 +23,8 @@ _DEFS(gtkmm,gtk)
 #include <gtkmm/selectiondata.h>
 #include <gtkmmconfig.h>
 
-GTKMM_USING_STD(random_access_iterator_tag)
-GTKMM_USING_STD(reverse_iterator)
+GLIBMM_USING_STD(random_access_iterator_tag)
+GLIBMM_USING_STD(reverse_iterator)
 
 
 namespace Gtk
@@ -51,7 +51,7 @@ public:
   typedef int*          iterator;
   typedef const int*    const_iterator;
 
-#ifndef GTKMM_HAVE_SUN_REVERSE_ITERATOR
+#ifndef GLIBMM_HAVE_SUN_REVERSE_ITERATOR
 
   typedef std::reverse_iterator<iterator>       reverse_iterator;
   typedef std::reverse_iterator<const_iterator> const_reverse_iterator;
@@ -64,7 +64,7 @@ public:
   typedef std::reverse_iterator<const_iterator, std::random_access_iterator_tag,
                                 int, const int&, const int*, ptrdiff_t> const_reverse_iterator;
 
-#endif /* GTKMM_HAVE_SUN_REVERSE_ITERATOR */
+#endif /* GLIBMM_HAVE_SUN_REVERSE_ITERATOR */
 
   explicit TreePath(size_type n, value_type value = 0);
   explicit TreePath(const Glib::ustring& path);
