@@ -70,7 +70,7 @@ void Window::destroy_()
 
   //GTKMM_LIFECYCLE
 
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Window::destroy_(): gobject_: %10X\n", gobject_);
   if(gobject_)
    g_warning("  gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
@@ -93,7 +93,7 @@ void Window::_destroy_c_instance()
 {
   //We override this,
   //because though top-level windows can only be destroyed with gtk_widget_destroy, according to Owen Taylor. murrayc.
-  #ifdef GTKMM_DEBUG_REFCOUNTING
+  #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Window::_destroy_c_instance() gobject_=%10X\n", gobject_);
   #endif
 
@@ -112,7 +112,7 @@ void Window::_destroy_c_instance()
     if (!gobject_disposed_)
     {
         //Windows can not be unrefed. They are "self-owning".
-        #ifdef GTKMM_DEBUG_REFCOUNTING
+        #ifdef GLIBMM_DEBUG_REFCOUNTING
         g_warning("Gtk::Window::_destroy_c_instance(): Calling gtk_object_destroy(): gobject_=%10X\n", object);
         #endif
         g_object_unref(object); //We ref()ed it one too many times to simplify our _init_unmanage() code.
