@@ -25,7 +25,7 @@
 
 #include <utility>
 #include <glibmmconfig.h>
-GTKMM_USING_STD(pair)
+GLIBMM_USING_STD(pair)
 
 _DEFS(pangomm,pango)
 
