@@ -1,4 +1,4 @@
 
 EXTRA_DIST = README config.sub missing config.guess install-sh \
-             ltmain.sh mkinstalldirs cxx.m4 cxx_std.m4 docgen.m4 macros.m4
+             ltmain.sh mkinstalldirs docgen.m4 macros.m4
 
