@@ -1,5 +1,9 @@
 2003-01-22  Murray Cumming  <murrayc@usa.net>
 
+	* Rename GTKMM_ macros to GLIBMM_.
+
+2003-01-22  Murray Cumming  <murrayc@usa.net>
+
 	* build_shared: Used the general/win32/posix variables used in
 	the gtkmm Makefile.ams, so that the libraries actually build.
 	* gtk/src/treepath.[hg|ccg]: Removed the TreePath(bool) override, as 
